# My_Raft_Practice

./: CMakeLists.txt  main.cpp
src/: Contexts.h  NetworkContext.h  NetworkNode.h  Node.h  Raft_server.h
src/states/: Candidate.cpp  Candidate.h  Follower.cpp  Follower.h  Leader.cpp  Leader.h
